k8s/canary-ingress-2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: external-nginx
  rules:
  - http:
      paths:
      - path: /dual-ingress
        pathType: Prefix
        backend:
          service:
            name: hello-canary
            port:
              number: 80
