k8s/canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing-canary
  namespace: default
spec:
  ingressClassName: external-nginx
  rules:
  - http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-canary
            port:
              number: 80
      - path: /dual-service
        pathType: Prefix
        backend:
          service:
            name: hello-dual
            port:
              number: 80
