k8s/stable-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
  namespace: default
spec:
  ingressClassName: external-nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service-np
            port:
              number: 80
      # - path: /v1
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: hello-v1
      #       port:
      #         number: 80
      # - path: /dual-ingress
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: hello-v1
      #       port:
      #         number: 80
